# TherapyCare

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/: dependabot.yml
backend/: .env.example  Dockerfile  README.md  conftest.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/accounts/: __init__.py  admin.py  jwt_serializers.py  me_urls.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/management/commands/: seed.py  seed_demo.py
backend/accounts/migrations/: 0001_initial.py
backend/appointments/: __init__.py  admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/appointments/migrations/: 0001_initial.py  0002_remove_availabilityslot.py  0003_refactor_appointment_add_sessionnote.py  0004_fill_null_patient_and_make_non_nullable.py
backend/audit/: __init__.py  admin.py  mixins.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
backend/audit/migrations/: 0001_initial.py  0002_refactor_uuid_entity_metadata.py
backend/clinics/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/clinics/migrations/: 0001_initial.py
backend/config/: asgi.py  middleware.py  pagination.py  throttling.py  urls.py  wsgi.py
backend/config/fixtures/: admin_interface_theme_therapycare.json
backend/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/directory/: INDEXES.md  __init__.py  admin.py  models.py  search.py  serializers.py  tests.py  urls.py  views.py
backend/directory/migrations/: 0001_initial.py  0002_therapistprofile_search_location_availability.py  0003_gin_indexes_specialties_languages.py
backend/patients/: __init__.py  admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/patients/migrations/: 0001_initial.py  0002_patient_and_patientaccess.py
backend/referrals/: __init__.py  admin.py  models.py  patient_creation.py  permissions.py  serializers.py  state_machine.py  tests.py  urls.py  views.py
backend/referrals/migrations/: 0001_initial.py  0002_refactor_referral_add_note_questionnaire.py  0003_add_reason.py
backend/scripts/: README.md  load_test_therapists.py  locust_therapists.py
backend/tests/: test_permission_bypass.py
docs/: SECURITY.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  (+3 more)
(+36 files in other folders)
